kustomization/base/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvideo-rabbitmq-svc
spec:
 ports:
 - name: ampq
   port: 5672
   targetPort: 5672
   protocol: TCP
 - name: management
   port: 15672
   targetPort: 15672
   protocol: TCP
 selector:
   app: nvideo-rabbitmq
