kustomization/base/rabbitmq/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: rabbitmq-tcproute
  labels:
    nvideo/route-for: rabbitmq
    name-for-gateway: nvideo-placeholder
spec:
  parentRefs:
    - name: gateway-name-placeholder # kustomize GATEWAY_NAME
      sectionName: rabbitmq-amqps-5672
      namespace: gateway-namespace-placeholder # kustomize GATEWAY_NAMESPACE
  rules:
    - backendRefs:
        - name: nvideo-rabbitmq-svc
          kind: Service
          port: 5672
